# onscripter-LONSdev

./: LICENSE  README.en.md  README.md
LONS/: CMakeLists.txt  LONS.sln  LONS.vcxproj  LONS.vcxproj.filters  LONS_main.cpp
LONS/Audio/: LOAudioElement.cpp  LOAudioElement.h  LOAudioModule.cpp  LOAudioModule.h
LONS/File/: LOCompressInfo.cpp  LOCompressInfo.h  LOFileModule.cpp  LOFileModule.h  LOPackFile.cpp  LOPackFile.h  consola.h
LONS/Render/: LOAction.cpp  LOAction.h  LOAnimation.cpp  LOAnimation.h  LOEffect.cpp  LOEffect.h  LOFont.cpp  LOFont.h  LOFontBase.cpp  LOFontBase.h  LOFontInfo.cpp  LOFontInfo.h  LOImageModule.cpp  LOImageModule.h  LOImageModule2.cpp  LOImageModule_NSsystem.cpp  LOImageModule_command.cpp  LOLayer.cpp  LOLayer.h  LOLayerData.cpp  LOLayerData.h  LOLayerInfo.cpp  LOLayerInfo.h  LOMatrix2d.cpp  LOMatrix2d.h  LOShader.cpp  LOShader.h  LOSurface.cpp  LOSurface.h  LOTextDescribe.cpp  LOTextDescribe.h  LOTexture.cpp  LOTexture.h
LONS/Scripter/: Buil_in_script.h  FuncInterface.cpp  FuncInterface.h  LOCodePage.cpp  LOCodePage.h  LOScriptPoint.cpp  LOScriptPoint.h  LOScriptReader.cpp  LOScriptReader.h  LOScriptReader_command.cpp  ONSvariable.cpp  ONSvariable.h
LONS/SysCore/: Android.cpp  windows.cpp
LONS/ToolKit/ONSpack/: ONSpack.sln
LONS/ToolKit/ONSpack/ONSpack/: Form1.Designer.cs  Form1.cs  ONSpack.csproj  Program.cs
LONS/ToolKit/ONSpack/ONSpack/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
LONS/UintTest/: 00.ns2  99.txt  script.xyz
LONS/UintTest/data/: NS.txt  arc.nsa
LONS/document/: LONS追加的命令.txt  NScrAPI CHS v0.78.html  NScrAPI CHS v0.79.html  SDL_mixer.html  libSDL2_LONS_add.txt  lons.cfg  lsp_command_use.txt  someThink.pptx  一些变量对应.xls
LONS/etc/: Android.cpp  BinArray.cpp  BinArray.h  Buil-in-script.txt  GBK.h  LOCodePage.cpp  LOCodePage.h  LOEvent1.cpp  LOEvent1.h  LOIO.cpp  LOIO.h  LOLog.cpp  LOLog.h  LOMessage.h  LOMessage_ch_utf8.cpp  LOStack.h  LOString.cpp  LOString.h  LOTimer.cpp  LOTimer.h  LOVariant.cpp  LOVariant.h  SDL_mem.cpp  SDL_mem.h
LONS/patch/SDL2.26.5/render/direct3d/: SDL_render_d3d.c  SDL_shaders_d3d.c  SDL_shaders_d3d.h
LONS/patch/SDL2.26.5/render/opengl/: SDL_render_gl.c  SDL_shaders_gl.c  SDL_shaders_gl.h
LONS/patch/SDL2.26.5/render/opengles2/: SDL_render_gles2.c  SDL_shaders_gles2.c  SDL_shaders_gles2.h  news.txt
LONS/patch/smpeg/: MPEGaudio.cpp
LONSdev_qt/: LONSdev_qt.pro
